<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/add_expense_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorAccent"
        android:elevation="@dimen/elevation"
        android:theme="@style/ToolBarStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/add_expense" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expense_description_layout"
        style="@style/AppTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_20"
        android:layout_marginTop="@dimen/padding_20"
        android:layout_marginEnd="@dimen/padding_20"
        android:hint="@string/add_expense_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_expense_toolbar">

        <EditText
            android:id="@+id/expense_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_16">

            <requestFocus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expense_amount_layout"
        style="@style/AppTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_20"
        android:layout_marginTop="@dimen/padding_20"
        android:layout_marginEnd="@dimen/padding_20"
        android:hint="@string/add_expense_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_description_layout">

        <EditText
            android:id="@+id/expense_amount_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_16">
        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/expense_currency_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_20"
        android:layout_marginTop="@dimen/padding_20"
        android:layout_marginEnd="@dimen/padding_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_amount_layout" />

    <Spinner
        android:id="@+id/expense_category_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_20"
        android:layout_marginTop="@dimen/padding_20"
        android:layout_marginEnd="@dimen/padding_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_currency_spinner" />

    <Button
        android:id="@+id/save_expense_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_20"
        android:layout_marginTop="@dimen/padding_20"
        android:layout_marginEnd="@dimen/padding_20"
        android:paddingTop="@dimen/padding_15"
        android:paddingBottom="@dimen/padding_15"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_category_spinner"/>
</androidx.constraintlayout.widget.ConstraintLayout>